[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Rémi Carton <remi.carton@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
advent = "advent.cli:day"
new_day = "advent.cli:new_day"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
termcolor = "^2.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
pylint = "^3.0.2"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
